@@ -38,7 +38,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static io.ballerina.projects.PackageVersion.BUILTIN_PACKAGE_VERSION;
 
@@ -187,7 +186,7 @@ public class BlendedManifest {
         return dependency.modules()
                 .stream()
                 .map(DependencyManifest.Module::moduleName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Collection<String> moduleNames(PackageManifest.Dependency dependency,
@@ -196,7 +195,7 @@ public class BlendedManifest {
                 dependency.org(), dependency.name(), dependency.version());
         return moduleDescriptors.stream()
                 .map(moduleDesc -> moduleDesc.name().toString())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<Dependency> lockedDependency(PackageOrg org, PackageName name) {
@@ -235,7 +234,7 @@ public class BlendedManifest {
     private Collection<Dependency> dependencies(DependencyOrigin origin) {
         return depContainer.getAll().stream()
                 .filter(dep -> dep.origin == origin)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public DiagnosticResult diagnosticResult() {
