@@ -1684,7 +1684,7 @@ public class TypeChecker extends SimpleBLangNodeAnalyzer<TypeChecker.AnalyzerDat
                     Map<String, BField> fieldList = ((BRecordType) referredKeyTypeConstraint).getFields();
                     memberTypes = fieldList.entrySet().stream()
                             .filter(e -> fieldNameList.contains(e.getKey())).map(entry -> entry.getValue().type)
-                            .collect(Collectors.toList());
+                            .toList();
                     if (memberTypes.isEmpty()) {
                         memberTypes.add(keyTypeConstraint);
                     }
@@ -4807,7 +4807,7 @@ public class TypeChecker extends SimpleBLangNodeAnalyzer<TypeChecker.AnalyzerDat
 
         List<BVarSymbol> requiredParams = function.symbol.params.stream()
                 .filter(param -> !param.isDefaultable)
-                .collect(Collectors.toList());
+                .toList();
         // Given named and positional arguments are less than required parameters.
         if (requiredParams.size() > invocationArguments.size()) {
             return false;
@@ -4815,7 +4815,7 @@ public class TypeChecker extends SimpleBLangNodeAnalyzer<TypeChecker.AnalyzerDat
 
         List<BVarSymbol> defaultableParams = function.symbol.params.stream()
                 .filter(param -> param.isDefaultable)
-                .collect(Collectors.toList());
+                .toList();
 
         int givenRequiredParamCount = 0;
         for (int i = 0; i < positionalArgs.size(); i++) {
