@@ -452,7 +452,7 @@ public final class SymbolUtil {
         if (!completionSearchProvider.checkModuleIndexed(moduleId)) {
             completionSearchProvider.indexModuleAndModuleSymbolNames(moduleId, symbolList.stream()
                     .map(symbol -> symbol.getName().get())
-                    .collect(Collectors.toList()), new ArrayList<>(symbolMapWithPrefix.keySet()));
+                    .toList(), new ArrayList<>(symbolMapWithPrefix.keySet()));
         }
 
         List<String> stringList = completionSearchProvider.getSuggestions(prefix);
@@ -468,6 +468,6 @@ public final class SymbolUtil {
     private static List<Symbol> getFilteredList(Map<String, Symbol> symbolMap, List<String> stringList) {
         return symbolMap.entrySet().stream().filter(stringSymbolEntry ->
                         stringList.contains(stringSymbolEntry.getKey().toLowerCase())).map(Map.Entry::getValue)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
