@@ -119,7 +119,7 @@ public class WaitActionNodeContext extends AbstractCompletionProvider<WaitAction
                 .filter(symbol -> (symbol instanceof VariableSymbol || symbol.kind() == PARAMETER ||
                         symbol.kind() == FUNCTION || symbol.kind() == WORKER)
                         && !symbol.getName().orElse("").equals(Names.ERROR.getValue()))
-                .collect(Collectors.toList());
+                .toList();
         completionItems.addAll(this.getCompletionItemList(filteredList, context));
         this.getAnonFunctionDefSnippet(context).ifPresent(completionItems::add);
         return completionItems;
