@@ -67,7 +67,7 @@ public class XMLNSDeclarationNodeContext extends AbstractCompletionProvider<XMLN
             } else {
                 List<Symbol> constants = context.visibleSymbols(context.getCursorPosition()).stream()
                         .filter(predicate)
-                        .collect(Collectors.toList());
+                        .toList();
                 completionItems.addAll(this.getCompletionItemList(constants, context));
                 completionItems.addAll(this.getModuleCompletionItems(context));
             }
