@@ -41,7 +41,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Common utility methods for the completion operation.
@@ -86,7 +85,7 @@ public final class CompletionUtil {
 
         return items.stream()
                 .map(LSCompletionItem::getCompletionItem)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
