@@ -281,7 +281,7 @@ public final class SignatureHelpUtil {
             filteredContent = visibleSymbols.stream()
                     .filter(symbolPredicate.and(symbol -> symbol.getName().isPresent()
                             && symbol.getName().get().equals(funcName)))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return filteredContent.stream().findAny();
