@@ -68,7 +68,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
 
 import static org.ballerinalang.debugadapter.evaluation.EvaluationException.createEvaluationException;
 import static org.ballerinalang.debugadapter.evaluation.EvaluationExceptionKind.INTERNAL_ERROR;
@@ -498,7 +497,7 @@ public class ExpressionAsProgramEvaluator extends Evaluator {
             }
 
             // Replaces original package name with the evaluation package name.
-            List<Node> moduleParts = importDeclarationNode.moduleName().stream().collect(Collectors.toList());
+            List<IdentifierToken> moduleParts = importDeclarationNode.moduleName().stream().toList();
             IdentifierToken packageToken = NodeFactory.createIdentifierToken(EVALUATION_PACKAGE_NAME);
             moduleParts.remove(0);
             moduleParts.add(0, packageToken);
@@ -510,7 +509,7 @@ public class ExpressionAsProgramEvaluator extends Evaluator {
             modifier = modifier.withModuleName(newModuleName);
 
             return modifier.apply();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     private void processSnippetFunctionParameters() throws EvaluationException {
