@@ -72,7 +72,7 @@ public class SymbolEquivalenceTest {
     public void testSymbols(List<LinePosition> positions) {
         List<Symbol> symbols = positions.stream()
                 .map(pos -> model.symbol(srcFile, pos).get())
-                .collect(Collectors.toList());
+                .toList();
         assertSymbols(symbols);
     }
 
@@ -113,7 +113,7 @@ public class SymbolEquivalenceTest {
         SemanticModel typeRefModel = SemanticAPITestUtils.getDefaultModulesSemanticModel("test-src/typedesc_test.bal");
         List<Symbol> symbols = positions.stream()
                 .map(pos -> typeRefModel.symbol(typesSrcFile, pos).get())
-                .collect(Collectors.toList());
+                .toList();
 
         assertSymbols(symbols);
     }
@@ -128,7 +128,7 @@ public class SymbolEquivalenceTest {
                     case VARIABLE -> ((VariableSymbol) s).typeDescriptor();
                     default -> throw new AssertionError("Unexpected symbol kind: " + s.kind());
                 })
-                .collect(Collectors.toList());
+                .toList();
         assertTypeSymbols(types);
     }
 
